--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boardwalk Games | Home</title>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/Images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/Images/favicon-16x16.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,9 +19,44 @@
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 
-<body>
-    <h1>Heading</h1>
-    <p class="sub-heading-color">Paragraph</p>
+<body class="d-flex flex-column min-vh-100">
+    <!-- Navigation -->
+    <div>Navigation</div>
+
+    <!-- Header with carousel -->
+    <header class="container">
+        <div class="row">
+            <div class="col-12 col-xl-6">Boardwalk Games intro text section</div>
+            <div class="col-12 col-xl-6">Carousel</div>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <!-- Services Section -->
+        <section class="container">
+            <div class="row">
+                <div class="col-12">Service section heading</div>
+                <div class="col-12 col-md-6 col-xl-3">Services card</div>
+                <div class="col-12 col-md-6 col-xl-3">Services card</div>
+                <div class="col-12 col-md-6 col-xl-3">Services card</div>
+                <div class="col-12 col-md-6 col-xl-3">Services card</div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer / contact section -->
+    <footer class="mt-auto">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12">Contact section heading</div>
+                <!-- Contact info -->
+                <div class="col-12 col-md-6 col-xl-4">Contact info & social links</div>
+                <!-- Opening times -->
+                <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
