--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 
+<!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
+
 <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
@@ -82,7 +84,7 @@
                         </div>
                         <div class="carousel-item">
                             <img src="assets/images/boardwalk-games-carousel-image-5.webp" class="d-block w-100"
-                                alt="A cup of steaming coffee on a wooden table, some playing cards, and a notebook.">
+                                alt="A cup of steaming coffee on a wooden table, some playing cards, and a notebook">
                         </div>
                         <div class="carousel-item">
                             <img src="assets/images/boardwalk-games-carousel-image-6.webp" class="d-block w-100"
@@ -104,9 +106,9 @@
         </div>
     </header>
 
-    <!-- Main Content -->
+    <!-- main element to hold all key sections of the home page. It is not part of the grid structure -->
     <main>
-        <!-- Services Section -->
+        <!-- Services section -->
         <section id="services" class="container section">
             <div class="row">
                 <div class="col-12 text-center">
@@ -185,6 +187,7 @@
     </main>
 
     <!-- Footer / contact section -->
+    <!-- mt-auto added to push footer to the bottom of the page -->
     <footer class="mt-auto">
         <div class="container">
             <div class="row justify-content-center">
